[project]
name = "wf"
version = "0.1.0"
description = "Workspace manager for feature-based multi-repo development"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
wf = "wf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
